--- a/.github/workflows/windows_build.yml
+++ b/.github/workflows/windows_build.yml
@@ -36,6 +36,7 @@ jobs:
         uses: hendrikmuhs/ccache-action@v1.2.13
       - name: Configure OS
         shell: bash
+        working-directory: ac
         env:
           CONTINUOUS_INTEGRATION: true
         run: |
